templates/iot/examples/infinispan-10/common/operator/030-Service-management.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: infinispan
  name: infinispan-management
spec:
  ports:
  - port: 9990
    targetPort: 9990
    name: management
  selector:
    app: infinispan-pod
    clusterName: infinispan
    infinispan_cr: infinispan
