templates/iot/examples/infinispan-10/common/operator/040-Route-management.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: infinispan
  labels:
    app: infinispan
spec:
  to:
    kind: Service
    name: infinispan-management
  port:
    targetPort: management
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
